<resources>
    <string name="app_name">Apptivity</string>
    <string name="cbMale">Männlich</string>
    <string name="cbFemale">Weiblich</string>
    <string name="inputName">Name</string>
    <string name="inputAlter">Alter</string>
    <string name="btPInfo">Speichern und Weiter</string>
    <string name="btBack">Zurück</string>
    <string name="btHome">Weiter</string>
    <string name="greetings">User</string>
    <string name="btSearch">Neue Suche</string>
    <string name="btFav">Favoriten</string>
    <string name="btOptions">Einstellungen</string>
    <string name="continues">Weiter</string>
    <string name="btBackHome">Fertig</string>
    <string name="btNewPI">Ändern</string>
    <string name="WithWho">Mit wem?</string>
    <string name="budget">Dein heutiges Budget:</string>
    <string name="alone">Alleine</string>
    <string name="partner">Partner(in)</string>
    <string name="family">Familie</string>
    <string name="friends">Freunden</string>
    <string name="showme">Zeig mir was!</string>
    <string name="where">Und wo?</string>
    <string name="city">Stadt</string>
    <string name="postalcode">Postleitzahl</string>
    <string name="backToHome">Zurück zu Home</string>
    <string name="btBackToHome">Zurück zu Home</string>
    <string name="hello_world">Hello World</string>
    <string name="tvNameOverview">tvNameOverview</string>
    <string name="tvAgeOverview">tvAgeOverview</string>
    <string name="tvGenderOverview">tvGenderOverview</string>
    <string name="btResetMatches">Alle Matches löschen</string>
    <string name="test12">|][|</string>
    <string name="test2">|][|</string>
    <string name="test3">[|</string>
    <string name="right">LIKE</string>
    <string name="left">DON\'T LIKE</string>
    <string name="getLocation">Standortsuche"</string>
    <string name="loading">loading ...</string>
    <string name="my_image_description">image</string>

</resources>
