<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EAEA"
    tools:context=".Search2">

    <EditText
        android:id="@+id/inputPostal"
        android:layout_width="244dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/calibriregular"
        android:hint="@string/postalcode"
        android:inputType="textPostalAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@color/Hintergrundblau"
        android:textColorHint="@color/schwarz"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTown" />

    <Button
        android:id="@+id/btSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/calibriregular"
        android:minWidth="250dp"
        android:text="@string/showme"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLocation"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/tvWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/where"
        android:textColor="@color/Hintergrundblau"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/calibriregular"/>


    <EditText
        android:id="@+id/inputTown"
        android:layout_width="244dp"
        android:layout_height="71dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:fontFamily="@font/calibriregular"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@color/Hintergrundblau"
        android:textColorHint="@color/schwarz"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhere" />

    <Button
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/calibriregular"
        android:minWidth="250dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/getLocation"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPostal"
        app:layout_constraintVertical_bias="0.427" />

    <ProgressBar
        android:id="@+id/progressBarGps"
        style="?android:attr/progressBarStyle"
        android:layout_width="110dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toTopOf="@+id/getLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPostal"
        app:layout_constraintVertical_bias="0.325" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="619dp"
        android:layout_height="553dp"
        android:alpha=".35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224"
        app:srcCompat="@drawable/apptivity_fg" />
</androidx.constraintlayout.widget.ConstraintLayout>